--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,10 @@ h1 {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.blog {
+    padding-top: 10px;
+    padding-left: 2px;
+    border: 1px solid;
+    margin-bottom: 5px;
+}
